tooling/nargo_cli/tests/snapshots/execution_success/u128_type/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "13958753312450585022": {
        "error_kind": "string",
        "string": "Field failed to decompose into specified 7 limbs"
      },
      "14514982005979867414": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _139",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_1, 128)] []",
    "BLACKBOX::RANGE [(_2, 128)] []",
    "EXPR [ (1, _0) (1, _1) -2358023 ]",
    "EXPR [ (-1, _0) (1, _1) -2333333 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_6, _7]",
    "BLACKBOX::RANGE [(_6, 64)] []",
    "BLACKBOX::RANGE [(_7, 64)] []",
    "EXPR [ (1, _0) (-18446744073709551616, _6) (-1, _7) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_8, _9]",
    "BLACKBOX::RANGE [(_8, 64)] []",
    "BLACKBOX::RANGE [(_9, 64)] []",
    "EXPR [ (1, _1) (-18446744073709551616, _8) (-1, _9) 0 ]",
    "EXPR [ (1, _6, _8) 0 ]",
    "EXPR [ (1, _0, _1) -28957394910 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_10]",
    "EXPR [ (1, _0, _10) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ (1, _0) 0 ]], outputs: [_11, _12]",
    "BLACKBOX::RANGE [(_12, 128)] []",
    "EXPR [ (1, _0) (-1, _12) (-1, _13) -1 ]",
    "BLACKBOX::RANGE [(_13, 128)] []",
    "EXPR [ (-1, _0, _11) (1, _1) (-1, _12) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _11) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_14, _15]",
    "BLACKBOX::RANGE [(_14, 64)] []",
    "BLACKBOX::RANGE [(_15, 64)] []",
    "EXPR [ (1, _11) (-18446744073709551616, _14) (-1, _15) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_16, _17]",
    "BLACKBOX::RANGE [(_16, 64)] []",
    "BLACKBOX::RANGE [(_17, 64)] []",
    "EXPR [ (1, _0) (-18446744073709551616, _16) (-1, _17) 0 ]",
    "EXPR [ (1, _14, _16) 0 ]",
    "EXPR [ (1, _11) -190 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_18]",
    "EXPR [ (1, _0, _18) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _1) 0 ], EXPR [ (1, _0) 0 ]], outputs: [_19, _20]",
    "BLACKBOX::RANGE [(_19, 128)] []",
    "EXPR [ (1, _0) (-1, _20) (-1, _21) -1 ]",
    "BLACKBOX::RANGE [(_21, 128)] []",
    "EXPR [ (-1, _0, _19) (1, _1) (-1, _20) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _19) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_22, _23]",
    "BLACKBOX::RANGE [(_22, 64)] []",
    "BLACKBOX::RANGE [(_23, 64)] []",
    "EXPR [ (1, _19) (-18446744073709551616, _22) (-1, _23) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_24, _25]",
    "BLACKBOX::RANGE [(_24, 64)] []",
    "BLACKBOX::RANGE [(_25, 64)] []",
    "EXPR [ (1, _0) (-18446744073709551616, _24) (-1, _25) 0 ]",
    "EXPR [ (1, _22, _24) 0 ]",
    "EXPR [ (1, _20) -128 ]",
    "EXPR [ (-1, _0) 12345 ]",
    "BLACKBOX::XOR [(_0, 128), (_1, 128)] [_26]",
    "EXPR [ (1, _26) -2358007 ]",
    "BLACKBOX::AND [(_0, 128), (_1, 128)] [_27]",
    "EXPR [ (1, _27) -8 ]",
    "EXPR [ (-1, _0) (-1, _28) 340282366920938463463374607431768211455 ]",
    "EXPR [ (-1, _1) (-1, _29) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::AND [(_28, 128), (_29, 128)] [_30]",
    "EXPR [ (-1, _30) 340282366920938463463374607431765853440 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 340282366920938463463374607431768211328 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_31, _32]",
    "BLACKBOX::RANGE [(_32, 129)] []",
    "EXPR [ (-1, _32) (-1, _33) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [(_33, 129)] []",
    "EXPR [ (1, _2) (-340282366920938463463374607431768211456, _31) (-1, _32) 340282366920938463463374607431768211328 ]",
    "EXPR [ (-1, _31) 0 ]",
    "BRILLIG CALL func 2: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 7 ], EXPR [ 2 ]], outputs: [[_34, _35, _36, _37, _38, _39, _40]]",
    "BLACKBOX::RANGE [(_34, 1)] []",
    "BLACKBOX::RANGE [(_35, 1)] []",
    "BLACKBOX::RANGE [(_36, 1)] []",
    "BLACKBOX::RANGE [(_37, 1)] []",
    "BLACKBOX::RANGE [(_38, 1)] []",
    "BLACKBOX::RANGE [(_39, 1)] []",
    "BLACKBOX::RANGE [(_40, 1)] []",
    "EXPR [ (1, _2) (-1, _34) (-2, _35) (-4, _36) (-8, _37) (-16, _38) (-32, _39) (-64, _40) 0 ]",
    "EXPR [ (1, _40, _40) (2, _40) (-1, _41) 1 ]",
    "EXPR [ (-1, _39) (-1, _42) 1 ]",
    "EXPR [ (2, _39, _41) (1, _41, _42) (-1, _43) 0 ]",
    "EXPR [ (1, _43, _43) (-1, _44) 0 ]",
    "EXPR [ (-1, _38) (-1, _45) 1 ]",
    "EXPR [ (2, _38, _44) (1, _44, _45) (-1, _46) 0 ]",
    "EXPR [ (1, _46, _46) (-1, _47) 0 ]",
    "EXPR [ (-1, _37) (-1, _48) 1 ]",
    "EXPR [ (2, _37, _47) (1, _47, _48) (-1, _49) 0 ]",
    "EXPR [ (1, _49, _49) (-1, _50) 0 ]",
    "EXPR [ (-1, _36) (-1, _51) 1 ]",
    "EXPR [ (2, _36, _50) (1, _50, _51) (-1, _52) 0 ]",
    "EXPR [ (1, _52, _52) (-1, _53) 0 ]",
    "EXPR [ (-1, _35) (-1, _54) 1 ]",
    "EXPR [ (2, _35, _53) (1, _53, _54) (-1, _55) 0 ]",
    "EXPR [ (1, _55, _55) (-1, _56) 0 ]",
    "EXPR [ (-1, _34) (-1, _57) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (2, _56, _34) (1, _56, _57) 0 ]], outputs: [_58]",
    "EXPR [ (2, _34, _56) (1, _56, _57) (-1, _59) 0 ]",
    "EXPR [ (1, _58, _59) -1 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _59) 0 ]], outputs: [_60, _61]",
    "BLACKBOX::RANGE [(_61, 128)] []",
    "EXPR [ (1, _59) (-1, _61) (-1, _62) -1 ]",
    "BLACKBOX::RANGE [(_62, 128)] []",
    "EXPR [ (-1, _59, _60) (1, _0) (-1, _61) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _60) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_63, _64]",
    "BLACKBOX::RANGE [(_63, 64)] []",
    "BLACKBOX::RANGE [(_64, 64)] []",
    "EXPR [ (1, _60) (-18446744073709551616, _63) (-1, _64) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _59) 0 ], EXPR [ 18446744073709551616 ]], outputs: [_65, _66]",
    "BLACKBOX::RANGE [(_65, 64)] []",
    "BLACKBOX::RANGE [(_66, 64)] []",
    "EXPR [ (1, _59) (-18446744073709551616, _65) (-1, _66) 0 ]",
    "EXPR [ (1, _63, _65) 0 ]",
    "EXPR [ (1, _60) -3086 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ], EXPR [ 2 ]], outputs: [_67, _68]",
    "BLACKBOX::RANGE [(_67, 127)] []",
    "BLACKBOX::RANGE [(_68, 1)] []",
    "EXPR [ (1, _2) (-2, _67) (-1, _68) 0 ]",
    "BRILLIG CALL func 2: inputs: [EXPR [ (1, _67) 0 ], EXPR [ 7 ], EXPR [ 2 ]], outputs: [[_69, _70, _71, _72, _73, _74, _75]]",
    "BLACKBOX::RANGE [(_69, 1)] []",
    "BLACKBOX::RANGE [(_70, 1)] []",
    "BLACKBOX::RANGE [(_71, 1)] []",
    "BLACKBOX::RANGE [(_72, 1)] []",
    "BLACKBOX::RANGE [(_73, 1)] []",
    "BLACKBOX::RANGE [(_74, 1)] []",
    "BLACKBOX::RANGE [(_75, 1)] []",
    "EXPR [ (1, _67) (-1, _69) (-2, _70) (-4, _71) (-8, _72) (-16, _73) (-32, _74) (-64, _75) 0 ]",
    "EXPR [ (1, _75, _75) (2, _75) (-1, _76) 1 ]",
    "EXPR [ (-1, _74) (-1, _77) 1 ]",
    "EXPR [ (2, _74, _76) (1, _76, _77) (-1, _78) 0 ]",
    "EXPR [ (1, _78, _78) (-1, _79) 0 ]",
    "EXPR [ (-1, _73) (-1, _80) 1 ]",
    "EXPR [ (2, _73, _79) (1, _79, _80) (-1, _81) 0 ]",
    "EXPR [ (1, _81, _81) (-1, _82) 0 ]",
    "EXPR [ (-1, _72) (-1, _83) 1 ]",
    "EXPR [ (2, _72, _82) (1, _82, _83) (-1, _84) 0 ]",
    "EXPR [ (1, _84, _84) (-1, _85) 0 ]",
    "EXPR [ (-1, _71) (-1, _86) 1 ]",
    "EXPR [ (2, _71, _85) (1, _85, _86) (-1, _87) 0 ]",
    "EXPR [ (1, _87, _87) (-1, _88) 0 ]",
    "EXPR [ (-1, _70) (-1, _89) 1 ]",
    "EXPR [ (2, _70, _88) (1, _88, _89) (-1, _90) 0 ]",
    "EXPR [ (1, _90, _90) (-1, _91) 0 ]",
    "EXPR [ (-1, _69) (-1, _92) 1 ]",
    "BRILLIG CALL func 2: inputs: [EXPR [ (1, _2) (-1, _67) 0 ], EXPR [ 7 ], EXPR [ 2 ]], outputs: [[_93, _94, _95, _96, _97, _98, _99]]",
    "BLACKBOX::RANGE [(_93, 1)] []",
    "BLACKBOX::RANGE [(_94, 1)] []",
    "BLACKBOX::RANGE [(_95, 1)] []",
    "BLACKBOX::RANGE [(_96, 1)] []",
    "BLACKBOX::RANGE [(_97, 1)] []",
    "BLACKBOX::RANGE [(_98, 1)] []",
    "BLACKBOX::RANGE [(_99, 1)] []",
    "EXPR [ (1, _2) (-1, _67) (-1, _93) (-2, _94) (-4, _95) (-8, _96) (-16, _97) (-32, _98) (-64, _99) 0 ]",
    "EXPR [ (1, _99, _99) (2, _99) (-1, _100) 1 ]",
    "EXPR [ (-1, _98) (-1, _101) 1 ]",
    "EXPR [ (2, _98, _100) (1, _100, _101) (-1, _102) 0 ]",
    "EXPR [ (1, _102, _102) (-1, _103) 0 ]",
    "EXPR [ (-1, _97) (-1, _104) 1 ]",
    "EXPR [ (2, _97, _103) (1, _103, _104) (-1, _105) 0 ]",
    "EXPR [ (1, _105, _105) (-1, _106) 0 ]",
    "EXPR [ (-1, _96) (-1, _107) 1 ]",
    "EXPR [ (2, _96, _106) (1, _106, _107) (-1, _108) 0 ]",
    "EXPR [ (1, _108, _108) (-1, _109) 0 ]",
    "EXPR [ (-1, _95) (-1, _110) 1 ]",
    "EXPR [ (2, _95, _109) (1, _109, _110) (-1, _111) 0 ]",
    "EXPR [ (1, _111, _111) (-1, _112) 0 ]",
    "EXPR [ (-1, _94) (-1, _113) 1 ]",
    "EXPR [ (2, _94, _112) (1, _112, _113) (-1, _114) 0 ]",
    "EXPR [ (1, _114, _114) (-1, _115) 0 ]",
    "EXPR [ (-1, _93) (-1, _116) 1 ]",
    "EXPR [ (2, _69, _91) (1, _91, _92) (-1, _117) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0, _117) 0 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_118, _119]",
    "BLACKBOX::RANGE [(_118, 126)] []",
    "BLACKBOX::RANGE [(_119, 129)] []",
    "EXPR [ (-1, _119) (-1, _120) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [(_120, 129)] []",
    "EXPR [ (1, _0, _117) (-340282366920938463463374607431768211456, _118) (-1, _119) 0 ]",
    "EXPR [ (1, _118) (-1, _121) 20746827117051438823981594372716013474 ]",
    "BLACKBOX::RANGE [(_121, 126)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _118) 64323764613183177041862057485226039389 ]], outputs: [_122]",
    "EXPR [ (-1, _118, _122) (64323764613183177041862057485226039389, _122) (1, _123) -1 ]",
    "EXPR [ (-1, _118, _123) (64323764613183177041862057485226039389, _123) 0 ]",
    "EXPR [ (-1, _119, _123) (53438638232309528389504892708671455233, _123) (-1, _124) 0 ]",
    "BLACKBOX::RANGE [(_124, 129)] []",
    "EXPR [ (2, _93, _115) (1, _115, _116) (-1, _125) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _119, _125) 0 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_126, _127]",
    "BLACKBOX::RANGE [(_126, 126)] []",
    "EXPR [ (-1, _127) (-1, _128) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [(_128, 129)] []",
    "EXPR [ (1, _119, _125) (-340282366920938463463374607431768211456, _126) (-1, _127) 0 ]",
    "EXPR [ (1, _126) (-1, _129) 20746827117051438823981594372716013474 ]",
    "BLACKBOX::RANGE [(_129, 126)] []",
    "BRILLIG CALL func 1: inputs: [EXPR [ (-1, _126) 64323764613183177041862057485226039389 ]], outputs: [_130]",
    "EXPR [ (-1, _126, _130) (64323764613183177041862057485226039389, _130) (1, _131) -1 ]",
    "EXPR [ (-1, _126, _131) (64323764613183177041862057485226039389, _131) 0 ]",
    "EXPR [ (-1, _127, _131) (53438638232309528389504892708671455233, _131) (-1, _132) 0 ]",
    "BLACKBOX::RANGE [(_132, 129)] []",
    "EXPR [ (1, _127) -49380 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) (-1, _1) 340282366920938463463374607431768211456 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_133, _134]",
    "BLACKBOX::RANGE [(_134, 129)] []",
    "EXPR [ (-1, _134) (-1, _135) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [(_135, 129)] []",
    "EXPR [ (1, _0) (-1, _1) (-340282366920938463463374607431768211456, _133) (-1, _134) 340282366920938463463374607431768211456 ]",
    "EXPR [ (-1, _133) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) (1, _1) 340282366920938463463374607431768211456 ], EXPR [ 340282366920938463463374607431768211456 ]], outputs: [_136, _137]",
    "BLACKBOX::RANGE [(_137, 129)] []",
    "EXPR [ (-1, _137) (-1, _138) 340282366920938463463374607431768211455 ]",
    "BLACKBOX::RANGE [(_138, 129)] []",
    "EXPR [ (-1, _0) (1, _1) (-340282366920938463463374607431768211456, _136) (-1, _137) 340282366920938463463374607431768211456 ]",
    "EXPR [ (-1, _136) 1 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _0) (-1, _1) 0 ]], outputs: [_139]",
    "EXPR [ (1, _0, _139) (-1, _1, _139) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]",
    "unconstrained func 2",
    "[Const { destination: Direct(5), bit_size: Integer(U32), value: 0 }, Const { destination: Direct(6), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(7), bit_size: Integer(U32), value: 3 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(7), offset_address: Direct(5) }, Cast { destination: Direct(1), source: Direct(1), bit_size: Integer(U32) }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, BinaryIntOp { destination: Direct(7), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(3), op: IntegerDiv, lhs: Direct(0), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Mul, lhs: Direct(3), rhs: Direct(2) }, BinaryFieldOp { destination: Direct(4), op: Sub, lhs: Direct(0), rhs: Direct(4) }, Store { destination_pointer: Direct(9), source: Direct(4) }, BinaryIntOp { destination: Direct(9), op: Add, bit_size: U32, lhs: Direct(9), rhs: Direct(6) }, Mov { destination: Direct(0), source: Direct(3) }, BinaryIntOp { destination: Direct(8), op: LessThan, bit_size: U32, lhs: Direct(9), rhs: Direct(7) }, JumpIf { condition: Direct(8), location: 7 }, Const { destination: Direct(9), bit_size: Integer(U32), value: 10 }, Stop { return_data: HeapVector { pointer: Direct(9), size: Direct(1) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert",
    "directive_to_radix"
  ]
}
