tooling/nargo_cli/tests/snapshots/execution_success/u128_type/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "361444214588792908": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "1998584279744703196": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "14990209321349310352": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "15764276373176857197": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ], EXPR [ (1, _1) 0 ], EXPR [ (1, _2) 0 ]], outputs: []",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32839 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(4), offset_address: Relative(5) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U128) }, Cast { destination: Direct(32837), source: Direct(32837), bit_size: Integer(U128) }, Cast { destination: Direct(32838), source: Direct(32838), bit_size: Integer(U128) }, Mov { destination: Relative(1), source: Direct(32836) }, Mov { destination: Relative(2), source: Direct(32837) }, Mov { destination: Relative(3), source: Direct(32838) }, Call { location: 17 }, Call { location: 18 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 32839 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, Stop { return_data: HeapVector { pointer: Relative(1), size: Relative(2) } }, Return, Call { location: 117 }, BinaryIntOp { destination: Relative(4), op: Add, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, BinaryIntOp { destination: Relative(5), op: LessThanEquals, bit_size: U128, lhs: Relative(1), rhs: Relative(4) }, JumpIf { condition: Relative(5), location: 23 }, Call { location: 123 }, Const { destination: Relative(5), bit_size: Integer(U128), value: 2358023 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 28 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: Sub, bit_size: U128, lhs: Relative(2), rhs: Relative(1) }, BinaryIntOp { destination: Relative(5), op: LessThanEquals, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, JumpIf { condition: Relative(5), location: 32 }, Call { location: 126 }, Const { destination: Relative(5), bit_size: Integer(U128), value: 2333333 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 37 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: Mul, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(6), bit_size: Integer(U128), value: 0 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U128, lhs: Relative(6), rhs: Relative(2) }, JumpIf { condition: Relative(5), location: 45 }, BinaryIntOp { destination: Relative(8), op: Div, bit_size: U128, lhs: Relative(4), rhs: Relative(2) }, BinaryIntOp { destination: Relative(7), op: Equals, bit_size: U128, lhs: Relative(8), rhs: Relative(1) }, JumpIf { condition: Relative(7), location: 45 }, Call { location: 129 }, Const { destination: Relative(5), bit_size: Integer(U128), value: 28957394910 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 50 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: Div, bit_size: U128, lhs: Relative(2), rhs: Relative(1) }, Const { destination: Relative(5), bit_size: Integer(U128), value: 190 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 56 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(5), op: Div, bit_size: U128, lhs: Relative(2), rhs: Relative(1) }, BinaryIntOp { destination: Relative(6), op: Mul, bit_size: U128, lhs: Relative(5), rhs: Relative(1) }, BinaryIntOp { destination: Relative(4), op: Sub, bit_size: U128, lhs: Relative(2), rhs: Relative(6) }, Const { destination: Relative(5), bit_size: Integer(U128), value: 128 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 64 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, Not { destination: Relative(4), source: Relative(1), bit_size: U128 }, Const { destination: Relative(5), bit_size: Integer(U128), value: 340282366920938463463374607431768199110 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 70 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: Xor, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(5), bit_size: Integer(U128), value: 2358007 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 76 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: And, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(5), bit_size: Integer(U128), value: 8 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 82 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: Or, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(5), bit_size: Integer(U128), value: 2358015 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 88 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: Shr, bit_size: U128, lhs: Relative(1), rhs: Relative(3) }, Const { destination: Relative(5), bit_size: Integer(U128), value: 3086 }, BinaryIntOp { destination: Relative(6), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(5) }, JumpIf { condition: Relative(6), location: 94 }, Const { destination: Relative(7), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(7) } }, BinaryIntOp { destination: Relative(4), op: Shl, bit_size: U128, lhs: Relative(1), rhs: Relative(3) }, Const { destination: Relative(3), bit_size: Integer(U128), value: 49380 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U128, lhs: Relative(4), rhs: Relative(3) }, JumpIf { condition: Relative(5), location: 100 }, Const { destination: Relative(6), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(6) } }, BinaryIntOp { destination: Relative(3), op: LessThan, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, Const { destination: Relative(4), bit_size: Integer(U1), value: 1 }, JumpIf { condition: Relative(3), location: 105 }, Const { destination: Relative(5), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(5) } }, BinaryIntOp { destination: Relative(3), op: LessThan, bit_size: U128, lhs: Relative(2), rhs: Relative(1) }, Const { destination: Relative(4), bit_size: Integer(U1), value: 0 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U1, lhs: Relative(3), rhs: Relative(4) }, JumpIf { condition: Relative(5), location: 111 }, Const { destination: Relative(6), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(6) } }, BinaryIntOp { destination: Relative(3), op: Equals, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, BinaryIntOp { destination: Relative(1), op: Equals, bit_size: U1, lhs: Relative(3), rhs: Relative(4) }, JumpIf { condition: Relative(1), location: 116 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(2) } }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 122 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 15764276373176857197 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 14990209321349310352 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 1998584279744703196 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 361444214588792908 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
